# dependent-type-web-lsp

./: .gitignore  .gitmodules  .vscodeignore  README.MD  README.md  _headers  debug.sh  extract_nrs.py  fix.js  http.js  index.html  package-lock.json  package.json  product.json  run.sh  sw.js  sync_examples.js  test.nrs
.github/workflows/: ci.yml  github-pages.yml  sync-examples.yml
TyportHDL/: .vsixmanifest
TyportHDL/client/: server.wasm
client/: package.json
client/src/: extension.ts
depend/: .package-lock.json
depend/vscode-web/: package.json
myExt/: extension.js
sample/: index.html  package-lock.json  package.json  product.json
sample/myExt/: extension.js
scripts/: retry-push.sh
server/: Cargo.toml  package.json
server/src/: completion.rs  main.rs  nrs_lang.rs  semantic_token.rs
server/src/parser/: mod.rs  syntax.rs
server/src/typort/: cxt.rs  elaboration.rs  mod.rs  pattern_match.rs  pretty.rs  syntax.rs  unification.rs
syntaxes/: typort.tmLanguage.json
vim/: .vsixmanifest
wasm-language-server/: .eslintignore  .gitignore  .vsixmanifest  package.json  run.sh
wasm-language-server/.github/workflows/: ci.yml
wasm-language-server/client/: package-lock.json  server.wasm
wasm-wasi-core/: .vsixmanifest  ThirdPartyNotices.txt  package.json
