[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.7.6"
lsp-types = { version = "0.95.1", features = ["proposed"] }
walkdir = "2"
serde = "1.0.189"
serde_json = "1.0.107"
oxc_index = "0.36.0"
chumsky = "0.9.3"
rust-lapper = "1.1.0"
thiserror = "2.0.3"
ropey = "1.5.0"
im-rc = "15.0.0"
log = "0.4.14"
colored = "2.1.0"
